--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "com.example.gcm_client"
-        minSdkVersion 8
-        targetSdkVersion 15
+        minSdkVersion 14
+        targetSdkVersion 29
     }
 
     buildTypes {
@@ -23,5 +23,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
