--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <!-- <activity
+        <activity
             android:name="com.example.gcm_client.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -36,17 +36,10 @@
         <activity
             android:name="com.example.gcm_client.SpinnerActivity"
             android:label="Spinner" >
-        </activity> -->
+        </activity>
         <activity
             android:name="com.example.gcm_client.MyActivity"
-            android:label="@string/app_name2"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:label="@string/app_name2" >
         </activity>
     </application>
 
