--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
-	
-	compileOptions {
-	    encoding "UTF-8"
-	}
+
+    compileOptions {
+        encoding "UTF-8"
+    }
 }
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
