--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gcm_client"
     android:versionCode="1"
-    android:versionName="1.0" >
-    
+    android:versionName="1.0">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
@@ -11,10 +11,12 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.gcm_client.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".ScaffoldActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_scaffold"
+            android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,25 +24,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.gcm_client.SecondActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:name=".MainActivity"
+            android:label="@string/app_name"></activity>
         <activity
-            android:name="com.example.gcm_client.ThirdActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:name=".UdidActivity"
+            android:label="@string/udid"></activity>
         <activity
-            android:name="com.example.gcm_client.FourthActivity"
-            android:label="Custom ArrayAdapter ListView" >
-        </activity>
+            android:name=".ListviewActivity"
+            android:label="@string/app_name"></activity>
         <activity
-            android:name="com.example.gcm_client.SpinnerActivity"
-            android:label="Spinner" >
-        </activity>
+            android:name=".PersonActivity"
+            android:label="Custom ArrayAdapter ListView"></activity>
         <activity
-            android:name="com.example.gcm_client.BaedalActivity"
-            android:label="@string/app_name2" >
-        </activity>
+            android:name=".SpinnerActivity"
+            android:label="Spinner"></activity>
+        <activity
+            android:name=".BaedalActivity"
+            android:label="@string/app_name2"></activity>
     </application>
 
 </manifest>
